--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-phaser-coffeescript",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Yeoman generator",
   "license": "MIT",
   "main": "app/index.js",
@@ -23,7 +23,7 @@
     "chalk": "^1.0.0",
     "coffee-script": "^1.9.3",
     "gulp": "^3.9.0",
-    "yeoman-generator": "^0.19.0",
+    "yeoman-generator": "0.20.1",
     "yosay": "^1.0.2"
   },
   "devDependencies": {
@@ -32,13 +32,8 @@
     "browserify-shim": "^3.8.8",
     "coffeeify": "^1.1.0",
     "del": "^1.2.0",
-    "gulp-coffeeify": "^0.1.8",
-    "gulp-load-plugins": "^0.10.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-size": "^1.2.1",
-    "gulp-sourcemaps": "^1.5.2",
-    "main-bower-files": "^2.8.0",
     "mocha": "*",
+    "underscore.string": "^3.1.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
