--- a/package.json
+++ b/package.json
@@ -28,9 +28,7 @@
     "coffee-script": "^1.9.3",
     "gulp": "^3.9.0",
     "yeoman-generator": "0.20.1",
-    "yosay": "^1.0.2"
-  },
-  "devDependencies": {
+    "yosay": "^1.0.2",
     "browser-sync": "^2.7.12",
     "browserify": "^10.2.4",
     "browserify-shim": "^3.8.8",
